	  added reference.
	* gm2/gm2-libs-iso/TextIO.def:  corrected dates and
	  added reference.
	* gm2/gm2-libs-iso/WholeConv.def:  corrected dates and
	  added reference.
	* gm2/gm2-libs-iso/WholeIO.def:  corrected dates and
	  added reference.
	* gm2/gm2-libs-iso/WholeStr.def:  corrected dates and
	  added reference.
	* gm2/tools-src/boilerplate.py:  corrected dates and
	  added reference.

2019-09-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  removed reference to sckt.c.
	* gm2/configure.in:  updated dates.
	* gm2/gm2-lang.h:  updated dates.
	* gm2/gm2-tree.h:  updated dates.
	* gm2/gpl.texi:  combined dates.
	* gm2/m2pp.h:  fixed boilerplate header.
	* gm2/m2pp.c:  updated dates.
	* gm2/gm2-compiler/ppg.mod:  corrected Copyright strings.
	* gm2/gm2-compiler/M2Range.mod:  indented Copright line.
	* gm2/gm2.texi:  changed license information.
	* gm2/mc/mcComp.mod:  corrected Copyright and attribution.
	* gm2/tools-src/createUlmSys:  fixed dates.
	* gm2/tools-src/def2texi.py:  fixed dates.  Fixed the
          generated Copyright notice.
	* gm2/www/Makefile.in:  corrected dates.
	* gm2/www/gm2-logo.ms:  corrected dates and version of the FDL.
	* gm2/gm2-libs-iso/ChanConsts.mod:  changed license
	  from LGPL to GPL3.
	* gm2/gm2-libs-pim/BitBlockOps.def:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BitBlockOps.mod:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BitByteOps.def:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BitByteOps.mod:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BitWordOps.def:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BitWordOps.mod:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BlockOps.def:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/BlockOps.mod:  changed license from
	  LGPL to GPL3.
	* gm2/gm2-libs-pim/Break.def:  changed license from LGPL
	  to GPL3.
	* gm2/gm2-libs-pim/CardinalIO.def:  changed license from LGPL