@@ -326,7 +326,9 @@
 	* gm2/gm2-libs-iso/WholeStr.def:  corrected dates and
 	  added reference.
 	* gm2/tools-src/boilerplate.py:  corrected dates and
-	  added reference.
+          added reference.
+	* gm2/gm2-libs-ch/wraptime.c:  corrected formatting
+	  and updated the GPLv3 with GCC runtime exemption.
 
 2019-09-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
